  registered on jabber server on login
  [alecghica]
- Bug fix: no need to refresh browser for users registered
  on login, they are binded on the fly
  [alecghica]
- Bug fix: fixed "Deregister ALL Users" function, as credentials were
  left un-deleted under IXMPPPasswordStorage resulting in
  various errors when register/deregister users
  [alecghica]


0.1a8 (2012-12-13)
------------------

- Bugfix. Check for GS profile version in dbconfig.py to avoid the instance not
  starting without having run the GS upgrade step.
  [jcbrand]


0.1a7 (2012-12-13)
------------------

- Documentation updated with Apache config example.
  [alecghica]
- Cleaned up dependencies that already ship with Plone
  [alecghica]
- Made Products.UserAndGroupSelectionWidget package optional.
  Products.UserAndGroupSelectionWidget will be imported only
  if package version is greater then 2.0.4 as it brings dependencies
  like plone.dexterity witch conflict with other packages found in
  the current Plone release.
  [alecghica]
- Fixed register users form to work for the case when
  Products.UserAndGroupSelectionWidget is not installed/used
  [alecghica]
- Added info on how to make plone.dexterity optional
  [alecghica]
- Explicitly store XMPP server's hostname instead of only using the XMPP
  domain. Also store the port number instead of only using the default.
  [jcbrand]
- Allow the configuration of the registry settings via buildout. See
  dbconfig.py
  [jcbrand]

------------------
0.1a6 (2012-11-22)
------------------

- Added Spanish translation.
  [macagua]
- Added improvements about i18n support.
  [macagua]
- Bugfix. Prevent getAllMemberIds from returning duplicates.
  [jcbrand]

------------------
0.1a5 (2012-11-19)
------------------

- Fixed RST formatting bugs.
  [jcbrand]

------------------
0.1a4 (2012-11-19)
------------------

- Documentation updated
  [jcbrand]
- Fixed HISTORY.txt markup
  [alecghica]
- Fixed version used for Products.UserAndGroupSelectionWidget to >2.04