@@ -1,23 +1,23 @@
 import logging
 import json
-
-from zope.component import getUtility
-from zope.component import queryUtility
+from zope.component import (
+    getUtility,
+    queryUtility,
+    getSiteManager
+)
 from zope.component.hooks import getSite
-from zope.component import getSiteManager
-
 from plone.registry.interfaces import IRegistry
 from Products.CMFCore.utils import getToolByName
 from Products.Five.browser import BrowserView
 from twisted.words.protocols.jabber.jid import JID
-
 from collective.xmpp.core.client import randomResource
 from collective.xmpp.core.httpb import BOSHClient
 from collective.xmpp.core.utils import setup
-
-from collective.xmpp.core.interfaces import IAdminClient
-from collective.xmpp.core.interfaces import IXMPPUsers
-from collective.xmpp.core.interfaces import IXMPPSettings
+from collective.xmpp.core.interfaces import (
+    IAdminClient,
+    IXMPPUsers,
+    IXMPPSettings
+)
 from collective.xmpp.core.utils.users import escapeNode
 
 logger = logging.getLogger(__name__)
