@@ -1,19 +1,19 @@
 import logging
-
 from plone.registry.interfaces import IRegistry
-from zope.component import getGlobalSiteManager
-from zope.component import getUtility
-from zope.component import queryUtility
+from zope.component import (
+    getGlobalSiteManager,
+    getUtility,
+    queryUtility
+)
 from zope.component.hooks import getSite
-
 from Products.CMFCore.utils import getToolByName
-
-from collective.xmpp.core.interfaces import IZopeReactor
-
 from collective.xmpp.core.client import AdminClient
-from collective.xmpp.core.interfaces import IAdminClient
-from collective.xmpp.core.interfaces import IXMPPSettings
-from collective.xmpp.core.interfaces import IProductLayer
+from collective.xmpp.core.interfaces import (
+    IAdminClient,
+    IXMPPSettings,
+    IProductLayer,
+    IZopeReactor
+)
 
 log = logging.getLogger(__name__)
 
